[workspace]
resolver = "2"
members = [
    "app/ch32x035_demo",
    "app/test_app",

    "drv/ch32x035_usb",

    "lib/rpc",
    "lib/spin",
    "lib/syscall",

    "pac/pac_common",
    "pac/pac_qingke",
    "pac/pac_riscv",

    "rpc/rpc_adb_host",
    "rpc/rpc_ch32x0_afio",
    "rpc/rpc_ch32x0_rcc",
    "rpc/rpc_test_helper",

    "sys/kernel",
    "sys/kernel_types",

    "task/adb_host",
    "task/ch32x0_afio",
    "task/ch32x0_rcc",
    "task/idle",
    "task/test_runner",
    "task/test_helper",
    "task/usb_keyboard",

    "tools/rtos_app_build",
    "tools/rtos_llvm_plugin",
    "tools/rtos_macros",
    "tools/stack_analyzer",
]

[workspace.dependencies]
ch32x035_usb = { path = "./drv/ch32x035_usb" }

rpc = { path = "./lib/rpc" }
spin = { path = "./lib/spin" }
syscall = { path = "./lib/syscall" }

pac_common = { path = "./pac/pac_common" }
pac_qingke = { path = "./pac/pac_qingke" }
pac_riscv = { path = "./pac/pac_riscv" }

rpc_adb_host = { path = "./rpc/rpc_adb_host" }
rpc_ch32x0_rcc = { path = "./rpc/rpc_ch32x0_rcc" }
rpc_ch32x0_afio = { path = "./rpc/rpc_ch32x0_afio" }
rpc_test_helper = { path = "./rpc/rpc_test_helper" }

kernel = { path = "./sys/kernel", artifact = "staticlib", target = "target" }
kernel_types = { path = "./sys/kernel_types" }

adb_host = { path = "./task/adb_host", artifact = "staticlib", target = "target" }
ch32x0_afio = { path = "./task/ch32x0_afio", artifact = "staticlib", target = "target" }
ch32x0_rcc = { path = "./task/ch32x0_rcc", artifact = "staticlib", target = "target" }
idle = { path = "./task/idle", artifact = "staticlib", target = "target" }
test_runner = { path = "./task/test_runner", artifact = "staticlib", target = "target" }
test_helper = { path = "./task/test_helper", artifact = "staticlib", target = "target" }
usb_keyboard = { path = "./task/usb_keyboard", artifact = "staticlib", target = "target" }

rtos_app_build = { path = "./tools/rtos_app_build" }
rtos_llvm_plugin = { path = "./tools/rtos_llvm_plugin", artifact = "cdylib" }
rtos_macros = { path = "./tools/rtos_macros" }

bitflags = "2.4.1"
ch32x0 = "0.1.6"
chiptool = { git = "https://github.com/benpye/chiptool.git" }
critical-section = "1.1.2"
llvm-ir = { git = "https://github.com/trail-of-forks/llvm-ir.git", branch = "ww/llvm-16", features = [ "llvm-16" ] }
llvm-plugin = { version = "0.4.1", features = [ "llvm16-0" ] }
llvm-sys = { version = "160.1.2", features = [ "prefer-dynamic" ] }
memoffset = "0.9"
open-enum = "0.4.0"
paste = "1.0.14"
prettyplease = "0.2.15"
proc-macro2 = "1.0.69"
quote = "1.0.33"
riscv = "0.10.1"
semihosting = "0.1.4"
seq-macro = "0.3.5"
serde = { version = "1.0.189", features = [ "derive" ] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
syn = "2.0.38"
usb-device = "0.2.9"
vcell = "0.1.3"
zerocopy = { version = "0.7.11", features = [ "derive" ] }

[profile.dev]
debug = "full"

[profile.release]
debug = "full"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
