[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open-enum.workspace = true
zerocopy.workspace = true
kernel_types.workspace = true
syscall.workspace = true

[features]

[lints]
workspace = true
