[package]
name = "pac_riscv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pac_common.workspace = true

[build-dependencies]
chiptool.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_yaml.workspace = true
syn.workspace = true

[lints]
workspace = true
