[package]
name = "adb_host"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch32x0 = { workspace = true, features = [ "ch32x035" ] }
critical-section.workspace = true
pac_qingke = { workspace = true, features = [ "critical_section" ] }
rtos_macros.workspace = true
rpc_adb_host.workspace = true
rpc_ch32x0_rcc.workspace = true
rpc.workspace = true
kernel_types.workspace = true

[lints]
workspace = true
