[package]
name = "usb_keyboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch32x0 = { workspace = true, features = [ "ch32x035" ] }
ch32x035_usb.workspace = true
rtos_macros.workspace = true
syscall.workspace = true
spin.workspace = true
usb-device = "0.2.9"
usbd-human-interface-device = "0.4.3"
vcell = "0.1.3"
rpc_adb_host.workspace = true
rpc_ch32x0_rcc.workspace = true
rpc_ch32x0_afio.workspace = true
kernel_types.workspace = true

[lints]
workspace = true
