[package]
name = "rtos_app_build"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
handlebars = { workspace = true, features = [ "dir_source" ] }
prettyplease.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde = { workspace = true, features = ["derive"] }
syn.workspace = true
toml.workspace = true
xshell.workspace = true

[lints]
workspace = true
